fix #330: login.html is broken in iOS

--- a/resource/styles/scss/_login.scss
+++ b/resource/styles/scss/_login.scss
@@ -203,8 +203,10 @@
 
     .front, .back {
       backface-visibility: hidden;
+      -webkit-backface-visibility: hidden;
       transition: 0.4s;
       transform-style: preserve-3d;
+      -webkit-transform-style: preserve-3d;
     }
     .front {
       z-index: 2;
@@ -218,6 +220,12 @@
     .back,
     &.to-flip .front {
       transform: rotateY(180deg);
+
+      // fix https://github.com/weseek/growi/issues/330
+      // 'backface-visibility: hidden' and 'z-index: -1' breaks layout in iOS
+      .fcbtn:after {
+        z-index: 0;
+      }
     }
     &.to-flip .back {
       transform: rotateY(0deg);
